--- a/views/page.ejs
+++ b/views/page.ejs
@@ -1,19 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= msg.content.split("\n")[0].replace(/\*/g, "") %></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="/sakura.css" type="text/css">
+    <link rel="stylesheet" href="/sakura-dark.css" media="screen and (prefers-color-scheme: dark)"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-  </head>
-  <body>
-    <div class="container">
-        <a href="/<%= channel.id %>"><i class="fa fa-arrow-left" aria-hidden="true"></i>Back</a>
-        <h1><%- marked.parse(msg.content.split("\n")[0])  %> (#<%= channel.name %>)</h1>
-        <hr />
-        <%- html %>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+</head>
+<body>
+<div class="container">
+    <a href="/<%= channel.id %>"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
+    <h1><%- marked.parse(msg.content.split("\n")[0]) %></h1>
+    <p>(#<%= channel.name %> from "<%= channel.guild.name %>")</p>
+    <hr/>
+    <% if(msg.attachments.first() !== undefined) { %>
+        <div style="text-align: center;"><img src="<%= msg.attachments.first().url %>" alt="<%= msg.attachments.first().filename %>"
+                                              style="max-width: 95%;"></div>
+    <% } %>
+    <%- html.substring(html.indexOf("\n") + 1)  %>
+</div>
+</body>
 </html>
