--- a/views/page.ejs
+++ b/views/page.ejs
@@ -11,14 +11,21 @@
 <body>
 <div class="container">
     <a href="/<%= channel.id %>"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
-    <h1><%- xss(marked.parse(msg.content.split("\n")[0])) %></h1>
-    <p>(#<%= channel.name %> from "<%= channel.guild.name %>")</p>
-    <hr/>
-    <% if(msg.attachments.first() !== undefined) { %>
-        <div style="text-align: center;"><img src="<%= msg.attachments.first().url %>" alt="<%= msg.attachments.first().filename %>"
-                                              style="max-width: 95%;"></div>
-    <% } %>
-    <%- html.substring(html.indexOf("\n") + 1)  %>
+    <div style="border-style: solid; margin: 10px; padding: 10px">
+        <h1><%- xss(marked.parse(msg.content.split("\n")[0])) %></h1>
+        <p>(#<%= channel.name %> from "<%= channel.guild.name %>")</p>
+        <hr/>
+        <% if(msg.attachments.first() !== undefined) { %>
+            <div style="text-align: center;"><img src="<%= msg.attachments.first().url %>" alt="<%= msg.attachments.first().filename %>"
+                                                style="max-width: 95%;"></div>
+        <% } %>
+        <% if(msg.embeds[0]?.description !== undefined) { %>
+            <h5><%- xss(marked.parse(msg.embeds[0].title ?? "")) %></h5>
+            <code><%- xss(marked.parse(msg.embeds[0].description ?? "")) %></code>
+        <% } %>
+        <%- html.substring(html.indexOf("\n") + 1)  %>
+        <b><%- xss(msg.author.username ?? "") %> (<%- new Date(msg.createdTimestamp).toLocaleString(); %>)</b>
+    </div>
 </div>
 </body>
 </html>
