--- a/views/channel.ejs
+++ b/views/channel.ejs
@@ -7,29 +7,79 @@
     <link rel="stylesheet" href="/sakura.css" type="text/css">
     <link rel="stylesheet" href="/sakura-dark.css" media="screen and (prefers-color-scheme: dark)"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <style>
+        .pagination {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 20px 0;
+            gap: 10px;
+        }
+        .pagination a {
+            padding: 8px 16px;
+            text-decoration: none;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        .pagination a.active {
+            background-color: darkcyan;
+            color: white;
+            border: 1px solid darkcyan;
+        }
+        .pagination a:hover:not(.active) {
+            background-color: #ddd;
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-    <a href="/"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
-    <h1><%= channel.topic %></h1>
-    <p> (#<%= channel.name %> from "<%= channel.guild.name %>")</p>
-    <hr/>
-    <% for (let msg of msgs) { %>
-        <div style="border-style: solid; margin: 10px; padding: 10px">
-            <a style="float: right;" href="/<%= channel.id %>/<%= msg.id %>"><i class="fa fa-chain"
-                                                                                    aria-hidden="true"></i></a>
-            <div><%- xss(marked.parse(msg.content ?? "")) %></div>
-            <% if(msg.attachments.first() !== undefined) { %>
-                <div style="text-align: center;"><img src="<%= msg.attachments.first().url %>" alt="<%= msg.attachments.first().filename %>"
-                                                      style="max-width: 95%;"></div>
+    <div class="container">
+        <a href="/"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
+        <h1><%= channel.topic %></h1>
+        <p> (#<%= channel.name %> from "<%= channel.guild.name %>")</p>
+        <hr/>
+        
+        <% for (let msg of msgs) { %>
+            <div style="border-style: solid; margin: 10px; padding: 10px">
+                <a style="float: right;" href="/<%= channel.id %>/<%= msg.id %>">
+                    <i class="fa fa-chain" aria-hidden="true"></i>
+                </a>
+                <div><%- xss(marked.parse(msg.content ?? "")) %></div>
+                <% if(msg.attachments.first() !== undefined) { %>
+                    <div style="text-align: center;">
+                        <img src="<%= msg.attachments.first().url %>" 
+                             alt="<%= msg.attachments.first().filename %>"
+                             style="max-width: 95%;">
+                    </div>
+                <% } %>
+                <% if(msg.embeds[0]?.description !== undefined) { %>
+                    <h5><%- xss(marked.parse(msg.embeds[0].title ?? "")) %></h5>
+                    <code><%- xss(marked.parse(msg.embeds[0].description ?? "")) %></code>
+                <% } %>
+                <b><%- xss(msg.author.username ?? "") %> 
+                   (<%- new Date(msg.createdTimestamp).toLocaleString(); %>)</b>
+            </div>
+        <% } %>
+
+        <!-- Pagination -->
+        <div class="pagination">
+            <% if (pagination.current > 1) { %>
+                <a href="/<%= channel.id %>?page=1">First</a>
+                <a href="/<%= channel.id %>?page=<%= pagination.current - 1 %>">Previous</a>
             <% } %>
-            <% if(msg.embeds[0]?.description !== undefined) { %>
-                <h5><%- xss(marked.parse(msg.embeds[0].title ?? "")) %></h5>
-                <code><%- xss(marked.parse(msg.embeds[0].description ?? "")) %></code>
+            
+            <% for(let i = Math.max(1, pagination.current - 2); 
+                    i <= Math.min(pagination.total, pagination.current + 2); i++) { %>
+                <a href="/<%= channel.id %>?page=<%= i %>" 
+                   class="<%= pagination.current === i ? 'active' : '' %>">
+                    <%= i %>
+                </a>
             <% } %>
-            <b><%- xss(msg.author.username ?? "") %> (<%- new Date(msg.createdTimestamp).toLocaleString(); %>)</b>
+            
+            <% if (pagination.current < pagination.total) { %>
+                <a href="/<%= channel.id %>?page=<%= pagination.current + 1 %>">Next</a>
+                <a href="/<%= channel.id %>?page=<%= pagination.total %>">Last</a>
+            <% } %>
         </div>
-    <% } %>
-</div>
+    </div>
 </body>
 </html>
