--- a/views/channel.ejs
+++ b/views/channel.ejs
@@ -76,9 +76,9 @@
             border-radius: 4px;
         }
         .pagination a.active {
-            background-color: #4CAF50;
+            background-color: darkcyan;
             color: white;
-            border: 1px solid #4CAF50;
+            border: 1px solid darkcyan;
         }
         .pagination a:hover:not(.active) {
             background-color: #ddd;
